--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ignore-path .eslintignore --ext .ts ."
+    "lint": "eslint --ignore-path .gitignore --ext .ts .",
+    "typecheck": "tsc --project tsconfig.json --noEmit --noUnusedLocals",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
