--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "channels",
   "version": "1.0.0",
   "description": "Simple channel-based sound player",
-  "main": "index.js",
+  "main": "dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "./dist"
@@ -30,5 +30,8 @@
     "eslint": "^8.21.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "sample-manager": "^2.1.4"
   }
 }
