--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "channels",
   "private": true,
-  "type": "module",
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
     "prepare": "husky install"
+  },
+  "lint-staged": {
+    "packages/**/*.ts?(x)": "eslint"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.33.0",
