--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -7,6 +7,9 @@
   "files": [
     "./dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
