--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config ./jest.config.js",
     "lint": "eslint --ignore-path .gitignore --ext .ts .",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
@@ -22,5 +22,12 @@
     "sample-manager": "^2.1.4",
     "seng-event": "^2.0.2"
   },
-  "homepage": "https://github.com/petervdn/channels/"
+  "homepage": "https://github.com/petervdn/channels/",
+  "devDependencies": {
+    "@types/jest": "^28.1.8",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^29.0.0",
+    "ts-jest": "^28.0.8",
+    "web-audio-test-api": "^0.5.2"
+  }
 }
