--- a/packages/use-channels/package.json
+++ b/packages/use-channels/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "@mediamonks/channels": "^0.3.1"
   }
 }
