--- a/packages/use-channels/package.json
+++ b/packages/use-channels/package.json
@@ -20,5 +20,6 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "@mediamonks/channels": "^0.3.1"
-  }
+  },
+  "homepage": "https://github.com/petervdn/channels/"
 }
