--- a/packages/use-channels/package.json
+++ b/packages/use-channels/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest --config ./jest.config.js",
-    "lint": "eslint --ignore-path .gitignore --ext .ts .",
+    "lint": "eslint --ignore-path ../../.gitignore --ext .ts .",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
