Mock XMLHttpRequest to test loading a soundfile
Changed some dependencies (channels, use-channels) to '*' due to some conflicts. Should be fixed later.

--- a/packages/use-channels/package.json
+++ b/packages/use-channels/package.json
@@ -19,7 +19,7 @@
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "@mediamonks/channels": "^0.3.1"
+    "@mediamonks/channels": "*"
   },
   "homepage": "https://github.com/petervdn/channels/"
 }
