--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^28.1.8",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.0.0",
+    "mock-xmlhttprequest": "^8.0.0",
     "ts-jest": "^28.0.8",
     "web-audio-test-api": "^0.5.2"
   }
