--- a/packages/example-project/package.json
+++ b/packages/example-project/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
-    "@mediamonks/use-channels": "^0.1.0"
+    "@mediamonks/use-channels": "*"
   },
   "scripts": {
     "start": "react-scripts start",
