--- a/packages/use-channels/package.json
+++ b/packages/use-channels/package.json
@@ -21,5 +21,5 @@
     "react": "^18.2.0",
     "@mediamonks/channels": "*"
   },
-  "homepage": "https://github.com/petervdn/channels/"
+  "homepage": "https://github.com/mediamonks/channels/"
 }
