--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -30,6 +30,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
+      - name: Install npm packages
+        run: |
+          cd ${{ github.event.inputs.package }}
+          npm ci
+      - name: fail cd
+        run: |
+          echo "1. cd Xpackages/${{ github.event.inputs.package }}"
       - name: bump version
         run: |
           echo "1. cd packages/${{ github.event.inputs.package }}"
