--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -18,7 +18,6 @@ on:
           - major
           - minor
           - patch
-          - prerelease
 
 jobs:
   bump-version:
@@ -34,6 +33,33 @@ jobs:
         run: |
           cd packages/${{ github.event.inputs.package }}
           npm ci
+      - name: Setup Git
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
       - name: bump version
         run: |
-          echo "1. cd packages/${{ github.event.inputs.package }}"
+          echo "1. cd packages/${{ github.event.inputs.package }}" 
+          cd packages/${{ github.event.inputs.package }}
+          
+          echo "2. npm version ${{ github.event.inputs.version }}" 
+          npm version ${{ github.event.inputs.version }} --no-git-tag-version
+          
+          echo "3. git add"
+          git add .
+          
+          echo "4. git commit ${{ github.event.inputs.package }} v$(npm pkg get version | tr -d '"')"
+          git commit -m "${{ github.event.inputs.package }} v$(npm pkg get version | tr -d '"')"
+          
+          echo "5. git tag $(npm pkg get name | tr -d '"')@$(npm pkg get version | tr -d '"')"
+          git tag $(npm pkg get name | tr -d '"')@$(npm pkg get version | tr -d '"')
+
+      - name: publish
+        run: |
+          cd ${{ github.event.inputs.package }}
+          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
+          npm publish
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Push latest version
+        run: git push origin main --follow-tags
