--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -30,9 +30,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
       - name: Install npm packages
-        run: |
-          cd packages/${{ github.event.inputs.package }}
-          npm ci
+        run: npm ci
       - name: Run tests
         run: |
           cd packages/${{ github.event.inputs.package }}
