--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -55,4 +55,12 @@ jobs:
           
           echo "5. git tag $(npm pkg get name | tr -d '"')@$(npm pkg get version | tr -d '"')"
           git tag $(npm pkg get name | tr -d '"')@$(npm pkg get version | tr -d '"')
-
+      - name: publish
+        run: |
+          cd packages/${{ github.event.inputs.package }}
+          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
+          npm publish
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Push latest version
+        run: git push origin main --follow-tags
