--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -53,8 +53,8 @@ jobs:
           echo "4. git commit ${{ github.event.inputs.package }} v$(npm pkg get version | tr -d '"')"
           git commit -m "${{ github.event.inputs.package }} v$(npm pkg get version | tr -d '"')"
           
-          echo "5. git tag $(npm pkg get name | tr -d '"')@$(npm pkg get version | tr -d '"')"
-          git tag $(npm pkg get name | tr -d '"')@$(npm pkg get version | tr -d '"')
+          echo "5. git tag $(npm pkg get name | tr -d '"' | sed -e 's/@mediamonks\///g')@$(npm pkg get version | tr -d '"')"
+          git tag $(npm pkg get name | tr -d '"' | sed -e 's/@mediamonks\///g')@$(npm pkg get version | tr -d '"')
       - name: publish
         run: |
           cd packages/${{ github.event.inputs.package }}
