--- a/packages/use-channels/tsconfig.build.json
+++ b/packages/use-channels/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
     "extends": "./tsconfig.json",
     "exclude": [
-        "src/**/*.spec.ts",
-        "src/**/*.test.ts"
+        "src/**/*.test.tsx",
+        "src/**/*.test.ts",
+        "src/testing/**/*"
     ]
 }
