Move ChannelsProvider to separate file, rename some tsx->ts test files

--- a/packages/use-channels/package.json
+++ b/packages/use-channels/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
     "jest-environment-jsdom": "^29.0.2",
+    "mock-xmlhttprequest": "^8.1.0",
     "ts-jest": "^28.0.8",
     "web-audio-test-api": "^0.5.2"
   }
