--- a/packages/use-channels/package.json
+++ b/packages/use-channels/package.json
@@ -18,7 +18,7 @@
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "peerDependencies": {
-    "@mediamonks/channels": "*",
+    "@mediamonks/channels": "^1.0.0",
     "react": "^18.2.0"
   },
   "homepage": "https://github.com/mediamonks/channels/",
