--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -35,6 +35,10 @@ jobs:
         run: |
           cd packages/${{ github.event.inputs.package }}
           npm run test
+      - name: Build
+        run: |
+          cd packages/${{ github.event.inputs.package }}
+          npm run build
       - name: Setup Git
         run: |
           git config user.name github-actions
