Add build step in GH workflow
If there is no built version, the tests for use-channels will fail. Not sure what a better solution would be, since i rather test against a version from npm but not sure how to do that.

--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -45,6 +45,8 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+      - name: build (for testing)
+        run: npm run build -w packages/channels -w packages/use-channels
       - name: bump version
         run: |
           echo "1. cd packages/${{ github.event.inputs.package }}" 
