--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -18,6 +18,10 @@ on:
           - major
           - minor
           - patch
+      dryrun:
+        description: 'Dry run (will not publish and tag)'
+        required: false
+        type: boolean
 
 jobs:
   bump-version:
@@ -33,6 +37,10 @@ jobs:
         run: |
           cd packages/${{ github.event.inputs.package }}
           npm ci
+      - name: build (for testing)
+        if: ${{ github.event.inputs.package == 'use-channels' }}
+        run: npm run build -w packages/channels
+      - name: bump version
       - name: Run tests
         run: |
           cd packages/${{ github.event.inputs.package }}
@@ -45,9 +53,6 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-      - name: build (for testing)
-        run: npm run build -w packages/channels -w packages/use-channels
-      - name: bump version
         run: |
           echo "1. cd packages/${{ github.event.inputs.package }}" 
           cd packages/${{ github.event.inputs.package }}
@@ -64,6 +69,7 @@ jobs:
           echo "5. git tag $(npm pkg get name | tr -d '"' | sed -e 's/@mediamonks\///g')@$(npm pkg get version | tr -d '"')"
           git tag $(npm pkg get name | tr -d '"' | sed -e 's/@mediamonks\///g')@$(npm pkg get version | tr -d '"')
       - name: publish
+        if: ${{ github.event.inputs.dryrun == 'false' }}
         run: |
           cd packages/${{ github.event.inputs.package }}
           npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
@@ -71,4 +77,5 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Push latest version
+        if: ${{ github.event.inputs.dryrun == 'false' }}
         run: git push origin main --tags
