--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -34,9 +34,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
       - name: Install npm packages
-        run: |
-          cd packages/${{ github.event.inputs.package }}
-          npm ci
+        run: npm ci
       - name: build (for testing)
         if: ${{ github.event.inputs.package == 'use-channels' }}
         run: npm run build -w packages/channels
