Add mediamonks prettier config
And run format on all files

--- a/packages/channels/tsconfig.build.json
+++ b/packages/channels/tsconfig.build.json
@@ -1,7 +1,4 @@
 {
-    "extends": "./tsconfig.json",
-    "exclude": [
-        "src/**/*.test.ts",
-        "src/testing/**/*"
-    ]
+  "extends": "./tsconfig.json",
+  "exclude": ["src/**/*.test.ts", "src/testing/**/*"]
 }
