--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "lint-staged": {
     "packages/**/*.ts?(x)": "eslint"
   },
+  "prettier": "@mediamonks/prettier-config",
   "devDependencies": {
+    "@mediamonks/prettier-config": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
