--- a/packages/use-channels/tsconfig.build.json
+++ b/packages/use-channels/tsconfig.build.json
@@ -1,8 +1,4 @@
 {
-    "extends": "./tsconfig.json",
-    "exclude": [
-        "src/**/*.test.tsx",
-        "src/**/*.test.ts",
-        "src/testing/**/*"
-    ]
+  "extends": "./tsconfig.json",
+  "exclude": ["src/**/*.test.tsx", "src/**/*.test.ts", "src/testing/**/*"]
 }
