Change runs on to ubuntu-latest

--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -25,7 +25,7 @@ on:
 
 jobs:
   bump-version:
-    runs-on: ubuntu-
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       id-token: write
