Fix bump-and-publish on node lts

--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -7,6 +7,9 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "url": "https://github.com/mediamonks/channels"
+  },
   "publishConfig": {
     "access": "public"
   },
