--- a/.github/workflows/bump_version_and_publish.yml
+++ b/.github/workflows/bump_version_and_publish.yml
@@ -66,17 +66,16 @@ jobs:
           echo "3. git add"
           git add .
           
-          echo "4. git commit ${{ github.event.inputs.package }} v$(npm pkg get version | tr -d '"')"
-          git commit -m "${{ github.event.inputs.package }} v$(npm pkg get version | tr -d '"')"
+          echo "4. git commit ${{ github.event.inputs.package }} v$(npm pkg get version | head -n 1 | tr -d '"')"
+          git commit -m "${{ github.event.inputs.package }} v$(npm pkg get version | head -n 1 | tr -d '"')"
           
-          echo "5. git tag $(npm pkg get name | tr -d '"' | sed -e 's/@mediamonks\///g')@$(npm pkg get version | tr -d '"')"
-          git tag $(npm pkg get name | tr -d '"' | sed -e 's/@mediamonks\///g')@$(npm pkg get version | tr -d '"')
+          echo "5. git tag $(npm pkg get name | head -n 1 | tr -d '"' | sed -e 's/@mediamonks\///g')@$(npm pkg get version | head -n 1 | tr -d '"')"
+          git tag $(npm pkg get name | head -n 1 | tr -d '"' | sed -e 's/@mediamonks\///g')@$(npm pkg get version | head -n 1 | tr -d '"')
       - name: publish
         if: ${{ github.event.inputs.dryrun == 'false' }}
         run: |
-          cd packages/${{ github.event.inputs.package }}
           npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-          npm publish --provenance
+          npm publish --workspace=packages/${{ github.event.inputs.package }} --provenance
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Push latest version
